@@ -230,4 +230,6 @@ Dist::Zilla::Plugin::TestRelease = 0
 Dist::Zilla::Plugin::Twitter = 0
 Dist::Zilla::Plugin::UploadToCPAN = 0
 
-[Prereqs]
+[RemovePrereqs]
+remove = Search::Elasticsearch::Client::5_0::Scroll
+remove = Search::Elasticsearch::Scroll
