@@ -23,4 +23,6 @@ srcreadme         = mkdn
 twitter_hash_tags = #perl #cpan
 ; auto_prereqs_skip = File::Find
 
-[Prereqs]
+[RemovePrereqs]
+remove = Search::Elasticsearch::Client::5_0::Scroll
+remove = Search::Elasticsearch::Scroll
