@@ -7,6 +7,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Added / test requires]
  - perl 5.008
 
+ [Removed / runtime requires]
+ - Search::Elasticsearch::Scroll
+
 0.001005 2014-09-19T07:03:13Z
 
 0.001004 2014-09-15T10:46:44Z
